--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="verde_light">#c6e5b1</color>
     <color name="azul">#007fff</color>
     <color name="tema">#50C878</color>
+    <color name="verdeRifa">#50C878</color>
 
 </resources>
