--- a/app/src/main/res/layout/activity_form_point_cliente.xml
+++ b/app/src/main/res/layout/activity_form_point_cliente.xml
@@ -9,6 +9,11 @@
     tools:context=".FormPointCliente"
     android:padding="16dp">
 
+    <RelativeLayout
+        android:id="@id/titulogeral"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="100dp">
     <TextView
         android:id="@+id/TituloCadastro"
         android:fontFamily="@font/montserrat"
@@ -17,14 +22,27 @@
         android:textSize="30sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="100dp"
-        android:layout_marginLeft="12dp"/>
+        />
+
+    <ImageButton
+        android:id="@+id/deletePonto"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:contentDescription="Delete"
+        android:onClick="DeleteRifa"
+        android:src="@drawable/delete"
+        app:tint="@color/black" />
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="372dp"
         android:layout_height="369dp"
-        android:layout_below="@+id/TituloCadastro"
-        android:layout_centerInParent="true"
+        android:layout_below="@+id/titulogeral"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="-36dp"
         android:backgroundTint="@color/white"
         android:onClick="Opcoes_QtPontos"
         android:orientation="vertical"
@@ -77,14 +95,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="8dp"
+                android:clickable="false"
+                android:focusable="false"
                 android:fontFamily="@font/montserrat"
                 android:hint="Número do Ponto"
                 android:padding="12dp"
                 android:textColor="#000000"
                 android:textColorHighlight="#000000"
-                android:textColorHint="#BDBCBE"
-                android:focusable="false"
-                android:clickable="false"/>
+                android:textColorHint="#BDBCBE" />
 
             <ImageButton
                 android:id="@+id/menu_pontos"
@@ -118,10 +136,10 @@
         android:layout_alignParentBottom="true"
         android:backgroundTint="#FDE1C1"
         android:fontFamily="@font/montserrat"
-        android:onClick="onClick_Create"
+        android:onClick="onClick_Cancel"
         android:text="Cancelar"
         android:textColor="#000000"
-        android:textSize="16sp"/>
+        android:textSize="16sp" />
 
     <Button
         android:id="@+id/button_Save"
