--- a/app/src/main/res/layout/activity_form_create_rifa.xml
+++ b/app/src/main/res/layout/activity_form_create_rifa.xml
@@ -54,6 +54,8 @@
             android:layout_marginVertical="8dp"
             android:fontFamily="@font/montserrat"
             android:hint="Título"
+            android:maxLength="30"
+            android:maxLines="1"
             android:padding="12dp"
             android:textColor="#000000"
             android:textColorHighlight="#000000"
@@ -66,6 +68,8 @@
             android:layout_marginVertical="8dp"
             android:fontFamily="@font/montserrat"
             android:hint="Prêmio"
+            android:maxLength="30"
+            android:maxLines="1"
             android:padding="12dp"
             android:textColor="#000000"
             android:textColorHighlight="#000000"
@@ -78,6 +82,8 @@
             android:layout_marginVertical="8dp"
             android:fontFamily="@font/montserrat"
             android:hint="Data do Sorteio Ex.: 12/06/2023"
+            android:maxLength="10"
+            android:maxLines="1"
             android:padding="12dp"
             android:textColor="#000000"
             android:textColorHighlight="#000000"
@@ -90,6 +96,8 @@
             android:layout_marginVertical="8dp"
             android:fontFamily="@font/montserrat"
             android:hint="Valor Ex.: 2.50"
+            android:maxLength="15"
+            android:maxLines="1"
             android:padding="12dp"
             android:textColor="#000000"
             android:textColorHighlight="#000000"
