Clicando no botão, o número entra automaticamente.

--- a/app/src/main/res/layout/activity_form_points.xml
+++ b/app/src/main/res/layout/activity_form_points.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:backgroundTint="#50C878"
+        android:backgroundTint="@color/tema"
         android:fontFamily="@font/montserrat"
         android:onClick="onClick_Edit"
         android:text="Sortear"
@@ -381,7 +381,7 @@
             android:id="@+id/botao27"
             android:layout_width="51dp"
             android:layout_height="wrap_content"
-            android:backgroundTint="#50C878"
+            android:backgroundTint="@color/tema"
             android:fontFamily="@font/montserrat"
             android:onClick="onClick_Edit"
             android:padding="2dp"
@@ -413,7 +413,7 @@
             android:id="@+id/botao32"
             android:layout_width="49dp"
             android:layout_height="wrap_content"
-            android:backgroundTint="#50C878"
+            android:backgroundTint="@color/tema"
             android:fontFamily="@font/montserrat"
             android:onClick="onClick_Edit"
             android:padding="2dp"
